--- a/.github/workflows/CodeCov.yml
+++ b/.github/workflows/CodeCov.yml
@@ -1,24 +1,27 @@
-name: CodeCov
+name: CodeCov 
 on: [push, pull_request]
 jobs:
   run:
     runs-on: ubuntu-latest
     env:
       OS: ubuntu-latest
-      PYTHON: '3.9'
+      PYTHON: '3.10'
     steps:
     - uses: checkout@v2
       with:
         fetch-depth: ‘2’
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Setup Python
       uses: actions/setup-python@master
       with:
         python-version: 3.10
+        
     - name: Generate Report
       run: |
         pip install coverage
         coverage run -m unittest
+        
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
