--- a/.github/workflows/CodeCov.yml
+++ b/.github/workflows/CodeCov.yml
@@ -8,7 +8,7 @@ jobs:
       PYTHON: '3.10'
     steps:
     - name: Checkout Repo
-      uses: checkout@v2
+      uses: actions/checkout@v3
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
 
